@@ -123,4 +123,8 @@ public class LaserBladeModelManager {
             return defaultModel;
         }
     }
+
+    public Map<Integer, LaserBladeModel> getModels() {
+        return models;
+    }
 }
